--- a/packages/PKGBUILD
+++ b/packages/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Dheeraj Vittal Shenoy <dheerajshenoy22@gmail.com>
 pkgname=navi
-pkgver=r291.f616c33
+pkgver=1.3.0
 pkgrel=1
 pkgdesc="Highly customizable and extensible modern file manager"
 arch=('x86_64')
@@ -12,14 +12,6 @@ provides=('navi')
 source=("${pkgname}-${pkgver}::git+https://github.com/dheerajshenoy/navi.git")
 sha256sums=('SKIP')
 install=navi.install
-
-pkgver() {
-    cd "$pkgname-$pkgver"
-    ( set -o pipefail
-      git describe --long --abbrev=7 2>/dev/null | sed 's/\([^-]*-g\)/r\1/;s/-/./g' ||
-          printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
-    )
-}
 
 build() {
     cd "$pkgname-$pkgver"
