Removed navi and changed to ${PROJECT_NAME}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,6 +200,6 @@ install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 # Install the data folder to ${PREFIX_DIR}
 install(DIRECTORY data/ DESTINATION ${SHAREDIR} COMPONENT Runtime)
 
-install(FILES resources/navi.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+install(FILES resources/${PROJECT_NAME}.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
 
-# install(FILES resources/navi.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable/apps PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+# install(FILES resources/${PROJECT_NAME}.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable/apps PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
