--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "KDDockWidgets"]
 	path = KDDockWidgets
 	url = https://github.com/KDAB/KDDockWidgets
+[submodule "external/llama.cpp"]
+	path = external/llama.cpp
+	url = https://github.com/ggerganov/llama.cpp
