--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/llama.cpp"]
 	path = external/llama.cpp
 	url = https://github.com/ggerganov/llama.cpp
+[submodule "external/KDDockWidgets"]
+	path = external/KDDockWidgets
+	url = https://github.com/KDAB/KDDockWidgets
